--- a/colleges.css
+++ b/colleges.css
@@ -14,11 +14,13 @@ html, body {
 
 /* Body & Background */
 body {
-  background-image: url(fotot/UBT7784-e1564990441516.jpg);
+  background-image: url(UBT7784-e1564990441516.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
   background-attachment: scroll;
+  overflow-x: hidden;
+  backdrop-filter: blur(5px);
 }
 
 /* ==================== 2. Navbar ==================== */
@@ -191,7 +193,6 @@ input:checked + .slider:before {
   box-shadow: inset 15px -4px 0px 15px #fff000;
 }
 
-/* Hamburger Menu */
 /* Hamburger Menu */
 .hamburger {
   display: none;
